--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,26 @@
 body {
-  font-family: sans-serif;
-  overflow: hidden;
+  font-family: 'DM Sans', sans-serif;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  overscroll-behavior: none;
 }
+
+.section{
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+}
+
 #webgi-canvas {
   width: 100%;
   height: 100%;
-  border-radius: 0.5rem;
-}
-#webgi-canvas-container{
-  width: 80vw;
-  height: 80vh;
-  margin: 10vh 10vw;
-  border-radius: 0.5rem;
+  position: fixed;
+  top: 0;
 
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  pointer-events: none;
+  z-index: -1;
 }
+
+
