--- a/src/styles.css
+++ b/src/styles.css
@@ -5,37 +5,60 @@
 }
 
 :root {
-  --red: #F24442;
-  --grey: #F7F7F7;
-  --grey2:#6e6e6e;
+  --red: #fe4443;
+  --grey: #f0efef;
+  --grey2: #6e6e6e;
+  --lightBlack: #464955;
+  --black: #13222a;
 }
 
 body {
   /* font-family: 'Orbitron', sans-serif; */
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
   overscroll-behavior: none;
+
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: thin;
+  scrollbar-color: var(--red);
 }
 
-main{
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--red);
+  border-radius: 2px;
+}
+
+.nav--bar {
+  display: flex;
+  align-content: center;
+  width: 100%;
+  justify-content: center;
+  font-family: "Orbitron", sans-serif;
+  margin-bottom: 7%;
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+
+main {
   overflow-y: scroll;
-    height: 100vh;
-    scroll-snap-type: mandatory;
-    scroll-snap-points-y: repeat(100vh);
-    scroll-snap-type: y mandatory;
+  overflow-x: hidden;
+  height: 100vh;
+  scroll-snap-type: mandatory;
+  scroll-snap-points-y: repeat(100vh);
+  scroll-snap-type: y mandatory;
 }
-
 
 .section {
-  display: flex;
   width: 100vw;
   height: 100vh;
-  justify-content: center;
   scroll-snap-align: center;
-
-  border: 1px solid red;
 }
 
 .first {
@@ -45,56 +68,56 @@ main{
   align-items: center;
 }
 
-.container1 {
+.section--one--container1 {
   width: 1300px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   height: fit-content;
-  margin-top: 8%;
+  /* margin-top: 8%; */
   position: relative;
 }
 
-.container1 h1 {
+.first h1 {
   font-size: 6rem;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
+  color: var(--lightBlack);
 }
 
-.container1 h1 span {
-  color:  var(--red);
+.first h1 span {
+  color: var(--red);
 }
 
-.container1 p {
+.first p {
   font-size: 1.5rem;
   font-weight: 400;
-  color:  var(--grey2);
-
+  color: var(--lightBlack);
 }
 
-.container1 h3 {
+.first h3 {
   color: var(--grey);
-  position:absolute;
+  position: absolute;
   font-size: 12rem;
   white-space: nowrap;
   z-index: -1;
   text-transform: uppercase;
- }
+  top: 60%;
+}
 
-.container2 {
+.section--one--container2 {
   width: 1300px;
   margin-bottom: 8%;
   display: flex;
   justify-content: space-between;
 }
 
-.spec--wrapper .name{
+.spec--wrapper .name {
   font-weight: 400;
-  color:  var(--grey2);
-  /* font-family: 'Orbitron', sans-serif; */
+  color: var(--lightBlack);
 }
 
-.value--wrapper{
+.value--wrapper {
   display: flex;
   align-items: flex-end;
 }
@@ -102,20 +125,228 @@ main{
 .value--wrapper .value {
   font-size: 1.5rem;
   font-weight: 200;
-  font-family: 'Orbitron', sans-serif;
-  color:var(--red);
+  font-family: "Orbitron", sans-serif;
+  color: var(--red);
 }
 .value--wrapper .unit {
   font-size: 12px;
   margin: 0 5px;
   margin-bottom: 5px;
   font-weight: 600;
-
+  color: var(--lightBlack);
 }
 
+.second {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
 
+.section--two--container1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: rotateZ(-90deg);
+}
 
+.second h1 {
+  font-size: 6rem;
+  font-family: "Orbitron", sans-serif;
+  color: var(--lightBlack);
+  white-space: 0px;
+}
 
+.section--two--container2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 8%;
+}
+
+.second span {
+  font-size: 8rem;
+  font-family: "Orbitron", sans-serif;
+  color: var(--red);
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  letter-spacing: 0px;
+}
+
+.second p {
+  font-size: 2rem;
+  font-family: "Orbitron", sans-serif;
+  color: var(--lightBlack);
+}
+
+.third {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+
+.section--three--container {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
+  margin-left: 10%;
+}
+
+.third h1 {
+  font-size: 6rem;
+  color: var(--red);
+  white-space: 0px;
+  margin-bottom: 20px;
+  line-height: 90px;
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+}
+
+.third p {
+  font-size: 20px;
+  color: var(--black);
+  font-weight: 200;
+  line-height: 30px;
+
+  /* width: 100%; */
+}
+
+.four {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: auto;
+}
+
+.section--four--container {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
+  margin-right: 10%;
+}
+
+.four h1 {
+  font-size: 6rem;
+  color: var(--red);
+  white-space: 0px;
+  margin-bottom: 20px;
+  line-height: 90px;
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+}
+
+.four p {
+  font-size: 20px;
+  color: var(--black);
+  font-weight: 200;
+  line-height: 30px;
+
+  /* width: 100%; */
+}
+
+.five {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: auto;
+}
+
+.section--five--container {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
+  margin-right: 10%;
+}
+
+.five h1 {
+  font-size: 6rem;
+  color: var(--red);
+  white-space: 0px;
+  margin-bottom: 20px;
+  line-height: 90px;
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+}
+
+.five p {
+  font-size: 20px;
+
+  color: var(--lightBlack);
+  font-weight: 200;
+  line-height: 30px;
+
+  /* width: 100%; */
+}
+
+.six {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  position: relative;
+}
+
+.section--six--container {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
+  margin-left: 10%;
+}
+
+.six h1 {
+  font-size: 6rem;
+  color: var(--red);
+  white-space: 0px;
+  margin-bottom: 20px;
+  line-height: 90px;
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+}
+
+.six p {
+  font-size: 20px;
+  color: var(--black);
+  font-weight: 200;
+  line-height: 30px;
+}
+
+footer {
+  background: var(--black);
+  padding: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+}
+
+footer > a {
+  text-decoration: none;
+  color: white;
+}
+
+.button--footer {
+  background: white;
+  color: black;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 30px;
+  font-size: 0.6rem;
+  cursor: pointer;
+  transition: all 0.8s ease;
+}
+
+.button--footer:hover {
+  background: black;
+  color: white;
+}
 
 #webgi-canvas {
   width: 100%;
