--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,6 @@
 }
 
 body {
-  /* font-family: 'Orbitron', sans-serif; */
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   margin: 0;
@@ -179,7 +178,7 @@ main {
   color: var(--lightBlack);
 }
 
-.third {
+.leftSide {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -213,7 +212,7 @@ main {
   /* width: 100%; */
 }
 
-.four {
+.rightSide {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -247,13 +246,6 @@ main {
   /* width: 100%; */
 }
 
-.five {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin: auto;
-}
-
 .section--five--container {
   display: flex;
   flex-direction: column;
@@ -283,10 +275,6 @@ main {
 }
 
 .six {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: auto;
   position: relative;
 }
 
@@ -317,7 +305,7 @@ main {
 
 footer {
   background: var(--black);
-  padding: 70px;
+  padding: 30px;
   display: flex;
   justify-content: space-around;
   align-items: center;
