--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,34 @@ body {
   border-radius: 2px;
 }
 
+.loader {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: var(--grey);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2em;
+  font-size: 12px;
+  font-family: "Orbitron", sans-serif;
+}
+
+.progress {
+  position: absolute;
+  top: 60%;
+  width: 50%;
+  height: 1px;
+  background: var(--red);
+  transform: scaleX(0);
+  transition: transform 1s;
+  transform-origin: left;
+  z-index: 10;
+  margin: 0 5%;
+}
+
 .nav--bar {
   display: flex;
   align-content: center;
